do some angular

--- a/public_html/app/components/why/why.component.html
+++ b/public_html/app/components/why/why.component.html
@@ -13,6 +13,6 @@
   <h2>My Sklills</h2>
   <p>I have skills in alot of different places. Here they are in two main groups:</p>
   <h3>Front End</h3>
-  <canvas width="100%" barChart [heightRatio]=".6" [lengths]="[1,2,3]"></canvas>
+  <canvas width="100%" barChart [heightRatio]=".6"></canvas>
   <h3>Back End</h3>
 </section>
