--- a/public_html/app/shared/sidebar/sidebar.component.html
+++ b/public_html/app/shared/sidebar/sidebar.component.html
@@ -13,8 +13,8 @@
     </li>
   </ul>
   <div class="social">
-    <svg iconDirr [icon]="github" [cssClass]=""></svg>
-    <svg iconDirr [icon]="linkedin" [cssClass]=""></svg>
-    <svg iconDirr [icon]="twitter" [cssClass]=""></svg>
+    <a iconDirr [iconName]="github"></a>
+    <a iconDirr [iconName]="linkedin"></a>
+    <a iconDirr [iconName]="twitter"></a>
   </div>
 </nav>
