--- a/public_html/app/components/when/when.component.html
+++ b/public_html/app/components/when/when.component.html
@@ -18,7 +18,7 @@
     <h1>where_ <small>am I located?</small></h1>
     <p class="flush--bottom">I am currently living in Johannesburg, South Africa. But that’s the cool thing about what I do, I can literally do it from anywhere in the world. Awesome, right?</p>
   </div>
-  <!--<sebm-google-map [disableDefaultUI]="true" [scrollwheel]='false' [zoom]="10" [latitude]="lat" [longitude]="lng" [styles]="mapStyles">
+  <sebm-google-map [disableDefaultUI]="true" [scrollwheel]='false' [zoom]="10" [latitude]="lat" [longitude]="lng" [styles]="mapStyles">
 
     <sebm-google-map-circle [latitude]="lat - 0.1" [longitude]="lng - 0.05"
         [radius]="15000"
@@ -27,5 +27,5 @@
         [editable]="false">
     </sebm-google-map-circle>
 
-  </sebm-google-map>-->
+  </sebm-google-map>
 </section>
