--- a/styleguide/scss/custom/layout/_margin.scss
+++ b/styleguide/scss/custom/layout/_margin.scss
@@ -34,3 +34,4 @@
 %flush--sides        { @include flush--sides;}
 
 .flush--bottom { @extend %flush--bottom;}
+.push--bottom { @extend %push--bottom;}
