--- a/styleguide/scss/custom/pages/_what.scss
+++ b/styleguide/scss/custom/pages/_what.scss
@@ -96,3 +96,10 @@
     margin-bottom: 0px;
     @extend %push--large--bottom;
   }
+
+[imageCover] {
+  max-width: none;
+  max-height: none;
+  width: auto;
+  height: auto;
+}
