--- a/public_html/app/components/layout/layout.component.html
+++ b/public_html/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="gw--no-guts">
-  <sidebar myFullHeight></sidebar>
+<div class="">
+  <sidebar></sidebar>
   <router-outlet></router-outlet>
 </div>
