--- a/public_html/app/components/what/what.component.html
+++ b/public_html/app/components/what/what.component.html
@@ -9,7 +9,7 @@
             <p class="portfolio-item__short">
               {{ item.description }}
             </p>
-            <a class="btn btn--base" href="">
+            <a class="btn btn--base" target="_black" href="{{ item.link }}">
             explore<span class="visuallyhidden"> website in embedded window</span>
             </a>
           </div>
