--- a/public_html/app/components/why/why.component.html
+++ b/public_html/app/components/why/why.component.html
@@ -9,10 +9,17 @@
     I am a young full stack web developer with an eye for beatifull design and rich, interactive user interfaces. I have experience in various frameworks and CMS´s. I also pack the power of acedemia with a B.Sc degree in Computer Science and Information Technology.
   </p>
 </section>
-<section class="soft--large bgc--">
+<section class="soft--large">
   <h2>My Sklills</h2>
   <p>I have skills in alot of different places. Here they are in two main groups:</p>
-  <h3>Front End</h3>
-  <canvas width="100%" barChart [heightRatio]=".6"></canvas>
-  <h3>Back End</h3>
+</section>
+<section class="soft--large bgc--primary">
+  <h3 class="flush--bottom">Front End</h3>
+  <p>Software development skills relating to the browser</p>
+  <unique-ng2-chart [dataKey]="'frontEnd'"></unique-ng2-chart>
+</section>
+<section class="soft--large bgc--secondary">
+  <h3 class="flush--bottom">Back End</h3>
+  <p>Software development skills relating to the server of an application</p>
+  <unique-ng2-chart [dataKey]="'backEnd'"></unique-ng2-chart>
 </section>
