--- a/public_html/app/components/when/when.component.html
+++ b/public_html/app/components/when/when.component.html
@@ -15,8 +15,10 @@
 </section>
 <section id="where" myFullPage class="google-map-wrapper">
   <div class="google-map-overlay">
-    <h1>where_ <small>am I located?</small></h1>
-    <p class="flush--bottom">I am currently living in Johannesburg, South Africa. But that’s the cool thing about what I do, I can literally do it from anywhere in the world. Awesome, right?</p>
+    <div class="content--left">
+      <h1>where_ <small>am I located?</small></h1>
+      <p class="flush--bottom">I am currently living in Johannesburg, South Africa. But that’s the cool thing about what I do, I can literally do it from anywhere in the world. Awesome, right?</p>
+    </div>
   </div>
   <sebm-google-map [disableDefaultUI]="true" [scrollwheel]='false' [zoom]="10" [latitude]="lat" [longitude]="lng" [styles]="mapStyles">
 
