--- a/styleguide/scss/custom/_config.scss
+++ b/styleguide/scss/custom/_config.scss
@@ -160,7 +160,7 @@ $font-base-filename-bi : "OpenSans-Regular-webfont"; // bold-italic
  * This font is enabled via custom/header/_fonts.scss
  */
 $font-header          : "Rokkitt";
-$font-header-path     : "../font/Rokkitt";
+$font-header-path     : "../font/rokkitt";
 $font-header-filename : "rokkitt-regular-webfont";
 $font-header-stack    : $font-header, Arial, sans-serif;
 
