--- a/src/app/components/+when/when.component.html
+++ b/src/app/components/+when/when.component.html
@@ -1,4 +1,4 @@
-<section id="when" class="bgc--secondary soft--large">
+<section id="when" class="bgc--secondary section--padding">
   <div class="content--left">
     <h1>
       when_ <small>can you get in touch?</small>
@@ -8,7 +8,7 @@
     </p>
   </div>
 </section>
-<section class="bgc--base-ltr soft--large">
+<section class="bgc--base-ltr section--padding">
   <div class="content--left">
     <form-contact></form-contact>
   </div>
