--- a/src/app/components/+why/why.component.html
+++ b/src/app/components/+why/why.component.html
@@ -1,4 +1,4 @@
-<section class="soft--large bgc--tertiary">
+<section class="section--padding bgc--tertiary">
   <h1>
     why_ <small>pick me?</small>
   </h1>
@@ -9,16 +9,10 @@
     I am a young full stack web developer with an eye for beautiful design and rich, interactive user interfaces. I have experience in various frameworks and Content Management Systems. My academic B.Sc degree in Computer Science and Information Technology provides a solid base for growth. I like taking ownership of my work and really enjoy working in a team environment. I am always eager to collaborate, learn new things and solve a problem over a cup of coffee.
   </p>
 </section>
-<section class="soft--large">
-  <h2 class="flush--bottom">My Skills:</h2>
-</section>
-<section class="soft--large bgc--tertiary">
-  <h4 class="flush--bottom">Front End</h4>
-  <p>Software development skills relating to the browser</p>
-  <unique-ng2-chart [dataKey]="'frontEnd'"></unique-ng2-chart>
-</section>
-<section class="soft--large">
-  <h4 class="flush--bottom">Back End</h4>
-  <p>Software development skills relating to the server of an application</p>
-  <unique-ng2-chart [dataKey]="'backEnd'"></unique-ng2-chart>
+<section class="section--padding">
+  <h1>my skills:
+    <small>Full stack development</small>
+  </h1>
+  <p>Skills ranging from backend to front end.</p>
+  <svg-chart [barColor]="'rbg(255, 255, 255)'" [ratioWidth]="4" [ratioHeight]="1.5" [dataKey]="'dataPoints'"></svg-chart>
 </section>
