fix my scroll nav

--- a/src/app/components/+when/when.component.html
+++ b/src/app/components/+when/when.component.html
@@ -1,17 +1,19 @@
-<section id="when" class="bgc--secondary section--padding">
-  <div class="content--left">
-    <h1>
-      when_ <small>can you get in touch?</small>
-    </h1>
-    <p class="flush--bottom">
-      There is no time like the present. So what are you waiting for? Whether you want to grab a coffee, chat about nerdy stuff or get quote from me just drop me a mail below and I will get back to you.
-    </p>
+<section id="when">
+  <div class="bgc--secondary section--padding">
+    <div class="content--left">
+      <h1>
+        when_ <small>can you get in touch?</small>
+      </h1>
+      <p class="flush--bottom">
+        There is no time like the present. So what are you waiting for? Whether you want to grab a coffee, chat about nerdy stuff or get quote from me just drop me a mail below and I will get back to you.
+      </p>
+    </div>
   </div>
-</section>
-<section class="bgc--base-ltr section--padding">
-  <div class="content--left">
-    <form-contact></form-contact>
-  </div>
+  <section class="bgc--base-ltr section--padding">
+    <div class="content--left">
+      <form-contact></form-contact>
+    </div>
+  </section>
 </section>
 <section id="where" myFullPage class="google-map-wrapper">
   <div class="google-map-overlay">
