--- a/src/app/scss/custom/components/_icon-as-inline-svg.scss
+++ b/src/app/scss/custom/components/_icon-as-inline-svg.scss
@@ -2,22 +2,28 @@
   position: absolute;
   top: auto;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: px-to-rem(270px);
+  right: auto;
+  width: 100%;
   text-align: center;
+  transition: all 175ms ease-in-out;
+
+  .sidebar--in & {
+    left: -0%;
+  }
 }
 
 svg-icon { display: inline-block;}
 
 .social__icon {
-  transform: all 175ms ease-in-out;
-  fill: rgba($clr-base, .75);
+  transition: all 175ms ease-in-out;
+  fill: rgba($clr-base-lt, .75);
   width: 36px;
   height: 36px;
   @include px-and-rem(margin-bottom, .25);
+  @include px-and-rem(margin, 0 .5 .25);
 
   .sidebar--in & {
     fill: white;
-    @include px-and-rem(margin, 0 .5 .25);
   }
 }
