--- a/src/app/scss/custom/components/_sidebar.scss
+++ b/src/app/scss/custom/components/_sidebar.scss
@@ -1,27 +1,12 @@
-sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  display: block;
-  color: white;
-  z-index: 20;
-  width: 40px;
-  transition: all 175ms ease-in-out;
-  overflow: hidden;
-}
+sidebar {}
 
-.sidebar--in {
-  width: 260px;
-  background-color: $clr-base;
-}
 
-.logo
-{
+.logo {
   position: relative;
   @include px-and-rem(padding, 0 2);
   display: block;
-  width: 260px;
+  width: px-to-rem(260px);
+  margin-left: px-to-rem(20px);
   transform: translateX(-100%);
   transition: all 175ms ease-in-out 0ms;
   opacity: 0;
