--- a/src/app/scss/custom/components/menus/_index.scss
+++ b/src/app/scss/custom/components/menus/_index.scss
@@ -3,6 +3,21 @@
 \*------------------------------------*/
 %menu-container {
   @include px-and-rem(padding, 1.66 0);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  display: block;
+  color: white;
+  z-index: 20;
+  transition: all 175ms ease-in-out;
+  width: px-to-rem(280px);
+  transform: translateX(-100%);
+
+  .sidebar--in & {
+    transform: translateX(0%);
+    background-color: $clr-base;
+  }
 }
 
   %menu {
@@ -21,97 +36,20 @@
         display: block;
         text-transform: uppercase;
         outline: 0;
-        @include px-and-rem(padding-left, .35);
-        @include px-and-rem(padding-right, .25);
+        @include px-and-rem(padding-left, 2);
+        @include px-and-rem(padding-right, 2);
         @include px-and-rem(padding-top, .55);
         @include px-and-rem(padding-bottom, .4);
-        line-height: normal;
+        line-height: 2.5;
         vertical-align: middle;
-        margin-left: .15rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        width: 1.95rem;
-        color: transparent;
-        opacity: .75;
-        transition:
-          background-color 175ms ease-in-out,
-          width 175ms ease-in-out,
-          font-size 175ms ease-in-out,
-          color 175ms ease-in-out,
-          background-color 175ms ease-in-out,
-          border-radius 175ms ease-in-out,
-          margin 0ms ease-in-out,
-          padding 0ms ease-in-out;
-
-        & span:first-letter {
-          color: white;
-          @include font-size($fs-h4, 0);
-          transition: all 175ms ease-in-out;
-        }
-
-        & span {
-          font-size: 0px;
-          display: inline-block;
-          position: relative;
-          transition: all 175ms ease-in-out;
-          .sidebar--in & {
-            @include font-size($fs-h4, 0);
-          }
-
-          &:before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 63%;
-            left: 0;
-            right: 0;
-            border-bottom: 1px solid;
-            color: inherit;
-            opacity: 0;
-          }
-        }
-
-
-        &:after {
-          content: "";
-          display: block;
-          background-color: $clr-base;
-          transition: all 175ms ease-in-out;
-          height: 2rem;
-          border-radius: 100%;
-          width: 2rem;
-          position: absolute;
-          z-index: -1;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-
-          .sidebar--in & {
-            width: 50vw;
-            height: 50vw;
-          }
-        }
-
+        width: px-to-rem(280px);
+        margin-left: px-to-rem(-280px);
+        color: white;
+        transition: all 175ms ease-in-out;
 
         .sidebar--in & {
-          width: px-to-rem(260px);
-          width: auto;
-          line-height: 2.5;
-          color: white;
-          opacity: 1;
-          @include px-and-rem(padding-left, 2);
-          @include px-and-rem(padding-right, 2);
           border-radius: 0%;
-          margin: 0;
-          transition:
-            background-color 175ms ease-in-out 75ms,
-            width 175ms ease-in-out,
-            font-size 175ms ease-in-out,
-            color 175ms ease-in-out,
-            background-color 175ms ease-in-out,
-            border-radius 175ms ease-in-out,
-            margin 0ms ease-in-out,
-            padding 0ms ease-in-out;
+          margin-left: px-to-rem(0px);
 
           &:hover,
           &:focus {
@@ -124,8 +62,41 @@
         }
       }
 
+      &.scroll-nav-item.scroll-nav-item--current > a {
+        color: $clr-primary;
+
+        &:hover,
+        &:focus {
+          color: $clr-primary-dk;
+        }
+
+        &:active {
+          color: $clr-primary;
+        }
+      }
+
       %menu__sub & { display: block;}
     }
+
+    .menu__item-text {
+      @include font-size($fs-h4, 0);
+      display: inline-block;
+      position: relative;
+      transition: all 175ms ease-in-out;
+
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 63%;
+        left: 0;
+        right: 0;
+        border-bottom: 1px solid;
+        color: inherit;
+        opacity: 0;
+      }
+    }
+
     .menu__item { @extend %menu__item;}
 
     %menu__item--current {
@@ -135,25 +106,31 @@
         &:focus,
         &:active {
           cursor: default;
-          & span:before { opacity: 1;}
           color: transparent;
-          & span:first-letter { color: $clr-primary;}
           .sidebar--in & { color: $clr-primary;}
         }
+      }
 
-        &[pageScroll] {
-          cursor: cursor;
-          color: white;
-          & span:before { opacity: 0;}
+      & .menu__item-text:before { opacity: 1;}
 
-          &:hover,
-          &:focus {
-            color: $clr-primary-lt;
-          }
+      &.scroll-nav-item {
+        & .menu__item-text:before { opacity: 0;}
 
-          &:active {
-            color: $clr-primary;
-          }
+        &.scroll-nav-item--current {
+          & .menu__item-text:before { opacity: 1;}
+        }
+      }
+
+      &.scroll-nav-item > a {
+        color: white;
+
+        &:hover,
+        &:focus {
+          color: $clr-primary-lt;
+        }
+
+        &:active {
+          color: $clr-primary;
         }
       }
     }
