add animation to the home page

--- a/src/app/components/+why/why.component.html
+++ b/src/app/components/+why/why.component.html
@@ -6,13 +6,15 @@
     <strong><em since></em></strong> of work experience, and counting!
   </p>
   <p class="flush--bottom">
-    I am a young full stack web developer with an eye for beautiful design and rich, interactive user interfaces. I have experience in various frameworks and Content Management Systems. My academic B.Sc degree in Computer Science and Information Technology provides a solid base for growth. I like taking ownership of my work and really enjoy working in a team environment. I am always eager to collaborate, learn new things and solve a problem over a cup of coffee.
+    I am a full stack web developer with an eye for beautiful design and rich interactive user interfaces. I have experience in software design patterns, a high level of technical experience in Javascript, various frameworks and Content Management Systems. My academic B.Sc degree in Computer Science and Information Technology provides a solid base for growth. I like taking ownership of my work and really enjoy working in a team environment. I am always eager to collaborate, learn new things and solve a problem over a cup of coffee.
   </p>
 </section>
 <section class="section--padding">
   <h1>my skills:
     <small>Full stack development</small>
   </h1>
-  <p>Skills ranging from backend to front end.</p>
-  <svg-chart [barColor]="'rbg(255, 255, 255)'" [ratioWidth]="4" [ratioHeight]="1.5" [dataKey]="'dataPoints'"></svg-chart>
+  <p><em>Skills ranging from backend to front end</em></p>
+  <div class="soft--top">
+    <svg-chart [barColor]="'rbg(255, 255, 255)'" [ratioWidth]="4" [ratioHeight]="1.5" [dataKey]="'dataPoints'"></svg-chart>
+  </div>
 </section>
