--- a/src/app/scss/custom/_config.scss
+++ b/src/app/scss/custom/_config.scss
@@ -156,6 +156,7 @@ $font-header-stack    : $font-header, Arial, sans-serif;
 /**
  * The base color for text, borders, etc.
  */
+$clr-base-extra: #707070;
 $clr-base      : $base-ui-color;
 $clr-base-lt   : #a1a1a1;
 $clr-base-ltr  : #e6e6e6;
