--- a/src/app/scss/custom/pages/_when.scss
+++ b/src/app/scss/custom/pages/_when.scss
@@ -16,6 +16,6 @@
   right: 0;
   top: 0;
   z-index: 5;
-  background-color: rgba($clr-base-ltst, .8);
+  background-color: rgba(white, .8);
   @extend %section--padding;
 }
