--- a/src/app/components/+home/home.component.html
+++ b/src/app/components/+home/home.component.html
@@ -1,7 +1,192 @@
 <div class="persona-main" myFullPage>
   <div class="persona">
     <div class="persona__img">
-      <img src="/assets/img/best-websites.svg" alt="Dewald the software engineer">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" style="overflow: visible;" viewBox="0 0 220 380" enable-background="new 0 0 220 380" xml:space="preserve">
+        <path fill="none" stroke="#404041" stroke-width="6" stroke-miterlimit="10" d="M126,279.2v30c0,8.9-7.2,16-16,16
+        c-8.9,0-16-7.2-16-16V279"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="322.7" x2="61.7" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="338.8" x2="61.7" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="373.1" x2="61.7" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="306.5" x2="61.7" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="322.7" x2="45.6" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="338.8" x2="45.6" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="312.5" x2="45.6" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="373.1" x2="45.6" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="354.9" x2="94" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="322.7" x2="94" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="373.1" x2="94" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="373.1" x2="77.8" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="354.9" x2="77.8" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="318.5" x2="77.8" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="322.7" x2="77.3" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="322.7" x2="34.7" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="322.7" x2="45.6" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="354.9" x2="94" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="110.1" y1="354.9" x2="94" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="354.9" x2="61.7" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="354.9" x2="29.4" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="354.9" x2="45.6" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="338.8" x2="77.8" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="77.8" y1="338.8" x2="61.7" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="338.8" x2="29.4" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="45.6" y1="338.8" x2="61.7" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="338.8" x2="110.1" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="306.5" x2="61.7" y2="304.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="94" y1="322.7" x2="94" y2="317.2"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="57.6" y1="306.5" x2="61.7" y2="306.5"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="61.7" y1="306.5" x2="77.3" y2="306.5"/>
+        <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M77.8,324.6v-29.7
+        c0-3.6,2.9-6.6,6.6-6.6H94v25.4l-15.7,25"/>
+        <polyline fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="94,313.8
+        110,338.8 110,373.1     "/>
+        <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M77.3,298.2
+        c-3.3,1.4-10,4.2-23.1,9.8c-26.5,11.2-24.8,30.9-24.8,30.9v34.3h161.2v-34.3c0,0,1.7-19.7-24.8-30.9c-13.1-5.5-19.8-8.3-23.1-9.8"
+        />
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="322.7" x2="158.3" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="338.8" x2="158.3" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="373.1" x2="158.3" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="306.5" x2="158.3" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="322.7" x2="174.4" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="338.8" x2="174.4" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="312.5" x2="174.4" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="373.1" x2="174.4" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="354.9" x2="126" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="322.7" x2="126" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="373.1" x2="126" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="373.1" x2="142.2" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="354.9" x2="142.2" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="318.5" x2="142.2" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="322.7" x2="142.7" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="322.7" x2="185.3" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="322.7" x2="174.4" y2="322.7"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="354.9" x2="126" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="109.9" y1="354.9" x2="126" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="354.9" x2="158.3" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="354.9" x2="190.6" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="354.9" x2="174.4" y2="354.9"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="338.8" x2="142.2" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="142.2" y1="338.8" x2="158.3" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="338.8" x2="190.6" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="174.4" y1="338.8" x2="158.3" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="338.8" x2="109.9" y2="338.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="306.5" x2="158.3" y2="304.8"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="126" y1="322.7" x2="126" y2="317.2"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="162.4" y1="306.5" x2="158.3" y2="306.5"/>
+
+        <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="158.3" y1="306.5" x2="142.7" y2="306.5"/>
+        <polyline fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="126,313.8
+        110,338.8 110,373.1     "/>
+        <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M142.2,324.6v-29.7
+        c0-3.6-2.9-6.6-6.6-6.6H126v25.4l15.7,25"/>
+
+        <g id="head">
+          <mask id="blink" x="0" y="0" width="200" height="80">
+            <rect x="50" y="153" width="120" height="3" fill="white"/>
+          </mask>
+
+          <ellipse id="right-eye" fill="#404041" cx="62.6" cy="153.3" rx="6.8" ry="6.8"/>
+          <ellipse id="left-eye" fill="#404041" cx="157.3" cy="153.3" rx="6.8" ry="6.8"/>
+          <line id="left-brow" fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="49.4" y1="113.7" x2="81.6" y2="113.7"/>
+          <path id="left-hair" fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M160.9,6.9
+          c0,0,0.2,44.6-38.4,58.9"/>
+          <line id="right-brow" fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="138.4" y1="113.7" x2="170.6" y2="113.7"/>
+          <path id="right-hair" fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M176.4,16.7
+          c0,0,0.2,44.6-38.4,58.9"/>
+
+          <g id="specticles">
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M122.5,155.1
+            c-2.8-3.6-7.4-5.9-12.5-5.9c-5.2,0-9.7,2.3-12.5,5.9"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M191.3,156.1v-8.4
+            c0-8.3-6.3-15-14-15h-39.8c-7.7,0-14,6.7-14,15v8.4v1c0,18.7,15.2,33.9,33.9,33.9c18.7,0,33.9-15.2,33.9-33.9L191.3,156.1z"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M96.6,156.1v-8.4
+            c0-8.3-6.3-15-14-15H42.7c-7.7,0-14,6.7-14,15v8.4v1c0,18.7,15.2,33.9,33.9,33.9c18.7,0,33.9-15.2,33.9-33.9L96.6,156.1z"/>
+            <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="161.6" y1="132.6" x2="200.7" y2="132.6"/>
+            <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="20.3" y1="132.6" x2="59.4" y2="132.6"/>
+          </g>
+
+          <g id="face">
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M191.3,140
+            c12.1,0,21.9,9.8,21.9,21.9c0,12.1-9.8,21.9-21.9,21.9"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M28.7,140
+            c-12.1,0-21.9,9.8-21.9,21.9c0,12.1,9.8,21.9,21.9,21.9"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M28.7,148.2
+            c0,0-2.4-29.1-3.7-50.7c-1.5-25,16.6-30.3,16.6-30.3c9.9-47.2,47-34.2,72-35.3c25-1,25.3-21.6,25.3-21.6
+            c52.3,6.6,37.2,52.2,37.2,52.2s20.4,9.8,20.4,36.9c0,21.6-5.3,48.7-5.3,48.7"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M123.4,184.4v10.8
+            c0,2.1-1.7,3.8-3.8,3.8h-19.2c-2.1,0-3.8-1.7-3.8-3.8v-10.8"/>
+
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M191.3,194.7v-43.2
+            c0-26.9-13-50.7-33.1-65.5c-6.2,6.1-14.6,9.8-24,9.8c-15.8,0-29-10.7-33-25.2c-40.8,4.4-72.5,38.9-72.5,80.8v43.2"/>
+            <path fill="#acded5" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M37.2,207.7
+            c-3.5-19.2-8.5-45.4-8.5-45.4v43.4v14.1c0,33.6,27.3,60.9,60.9,60.9h40.8c33.6,0,60.9-27.3,60.9-60.9v-57.5c0,0-8,41.8-10.9,58.6
+            c-2.8,16-14,15-14,15h-19v-5.7c0-6.3-5.1-11.5-11.5-11.5H84c-6.3,0-11.5,5.1-11.5,11.5v5.7h-19c0,0-11.3,1-14-15
+            C38.9,217.4,38.1,212.8,37.2,207.7"/>
+            <line fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="99.1" y1="250.7" x2="120.6" y2="250.7"/>
+            <path fill="none" stroke="#404041" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" d="M91.7,232.6
+            c4.3,3.2,10.9,5.2,18.3,5.2c7.4,0,14-2,18.3-5.2"/>
+          </g>
+        </g>
+      </svg>
     </div>
     <h1 aspects class="persona__main">
       Hello, I am <span>Dewald.</span>
