--- a/src/app/components/+when/when.component.html
+++ b/src/app/components/+when/when.component.html
@@ -1,26 +1,20 @@
 <section id="when">
   <div class="bgc--secondary section--padding">
-    <div class="content--left">
-      <h1>
-        when_ <small>can you get in touch?</small>
-      </h1>
-      <p class="flush--bottom">
-        There is no time like the present. So what are you waiting for? Whether you want to grab a coffee, chat about nerdy stuff or get quote from me just drop me a mail below and I will get back to you.
-      </p>
-    </div>
+    <h1>
+      when_ <small>can you get in touch?</small>
+    </h1>
+    <p class="flush--bottom">
+      There is no time like the present. So what are you waiting for? Whether you want to grab a coffee, chat about nerdy stuff or get a quote from me just drop me a mail below and I will get back to you.
+    </p>
   </div>
   <section class="bgc--base-ltr section--padding">
-    <div class="content--left">
-      <form-contact></form-contact>
-    </div>
+    <form-contact></form-contact>
   </section>
 </section>
 <section id="where" myFullPage class="google-map-wrapper">
   <div class="google-map-overlay">
-    <div class="content--left">
-      <h1>where_ <small>am I located?</small></h1>
-      <p class="flush--bottom">I am currently living in Johannesburg, South Africa. But that’s the cool thing about what I do, I can literally do it from anywhere in the world. Awesome, right?</p>
-    </div>
+    <h1>where_ <small>am I located?</small></h1>
+    <p class="flush--bottom">I am currently living in Johannesburg, South Africa. But that’s the cool thing about what I do, I can literally do it from anywhere in the world. Awesome, right?</p>
   </div>
   <sebm-google-map [disableDefaultUI]="true" [scrollwheel]='false' [zoom]="10" [latitude]="lat" [longitude]="lng" [styles]="mapStyles">
 
