--- a/src/app/scss/custom/pages/_home.scss
+++ b/src/app/scss/custom/pages/_home.scss
@@ -14,14 +14,17 @@
   transform: translateY(-50%);
 }
 
-.persona__main
-{
+.persona__main {
+  position: relative;
   height: 40px;
   margin-bottom: 0px;
   line-height: 1;
   font-family: $font-base-stack;
   font-weight: 300;
+  display: inline-block;
   @include font-size($fs-h2, 0);
+  @include px-and-rem(padding-left, 1);
+  @include px-and-rem(padding-right, 1);
 
   @include media-query(palm) {
     @include font-size($fs-h4, 0);
@@ -40,11 +43,15 @@
       color: inherit;
       border-bottom: 3px solid;
       top: 76%;
+      width: calc(100% - 0.06em);
       left: .03em;
       right: .03em;
     }
   }
   &.typing:after {
+    position: absolute;
+    left: calc(100% - .4em);
+    top: 0;
     content: "";
     display: inline-block;
     color: inherit;
@@ -55,6 +62,29 @@
     animation-timing-function: ease-in-out;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+  }
+
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: .5rem;
+    right: .5rem;
+    top: -.45rem;
+    bottom: -.4rem;
+    opacity: 0;
+    background-color: $clr-primary-dk;
+    z-index: -1;
+  }
+
+  &.highlight {
+    color: white;
+    &:before {
+      opacity: 1;
+    }
+    &:after {
+      left: calc(0% + 10px);
+    }
   }
 }
 
