fix speed and typos according to raymonds feedback

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
     </li>
   </ul>
   <div class="social">
-    <a target="_blank" href="https://za.linkedin.com/in/dewald-laubscher-15342b102"><svg-icon class="social__icon" [iconName]="'linkedin'"></svg-icon></a>
+    <a target="_blank" href="https://za.linkedin.com/in/dewaldlaubscher"><svg-icon class="social__icon" [iconName]="'linkedin'"></svg-icon></a>
     <a target="_blank" href="https://twitter.com/dewwwald"><svg-icon class="social__icon" [iconName]="'twitter'"></svg-icon></a>
     <a target="_blank" href="http://github.com/dewwwald"><svg-icon class="social__icon" [iconName]="'github'"></svg-icon></a>
   </div>
