--- a/src/app/scss/custom/animations/_!all.scss
+++ b/src/app/scss/custom/animations/_!all.scss
@@ -8,3 +8,9 @@
 @import 'in-right';
 @import 'in-bottom';
 @import 'in-top';
+
+%anim--portable--none {
+  @include media-query (portable) {
+    animation-name: none;
+  }
+}
