--- a/src/app/scss/custom/base/_headings.scss
+++ b/src/app/scss/custom/base/_headings.scss
@@ -12,3 +12,11 @@ h1, h2, h3, h4, h5, h6 {
   vertical-align: middle;
   font-weight: 700;
 }
+
+h1 {
+  line-height: 1;
+
+  & small {
+    line-height: .8;
+  }
+}
