--- a/src/app/shared/form-content/form-content.component.html
+++ b/src/app/shared/form-content/form-content.component.html
@@ -20,7 +20,7 @@
   </form>
 </div>
 <div [hidden]="!submitted">
-  <h2>Thank you for contacting us! I'll get back to you soon.</h2>
+  <h2>Thank you for contacting me! I'll get back to you soon.</h2>
   <div class="gw">
     <fieldset class="g g-1/2">
       <div class="push--bottom">
