fix the sidebar in mobile

--- a/src/app/scss/custom/components/_icon-as-inline-svg.scss
+++ b/src/app/scss/custom/components/_icon-as-inline-svg.scss
@@ -9,6 +9,10 @@
   padding-right: 2rem;
   text-align: right;
   @include px-and-rem(padding-bottom, 3);
+
+  @include media-query (palm) {
+    @include px-and-rem(padding-bottom, 1.5);
+  }
 }
 
 svg-icon { display: inline-block;}
